--- a/index.html
+++ b/index.html
@@ -231,12 +231,12 @@
         </div>
 
         <div class="tabs">
-            <button class="tab active" onclick="showTab('crisis')">🚨 Crisis 72h</button>
-            <button class="tab" onclick="showTab('faltantes')">💸 Dinero Perdido</button>
-            <button class="tab" onclick="showTab('deudas')">💳 Deudas Juan</button>
-            <button class="tab" onclick="showTab('decisiones')">❌ Malas Decisiones</button>
-            <button class="tab" onclick="showTab('inversiones')">📊 Inversiones</button>
-            <button class="tab" onclick="showTab('ventas')">📈 Ventas Necesarias</button>
+            <button class="tab active" data-tab="crisis">🚨 Crisis 72h</button>
+            <button class="tab" data-tab="faltantes">💸 Dinero Perdido</button>
+            <button class="tab" data-tab="deudas">💳 Deudas Juan</button>
+            <button class="tab" data-tab="decisiones">❌ Malas Decisiones</button>
+            <button class="tab" data-tab="inversiones">📊 Inversiones</button>
+            <button class="tab" data-tab="ventas">📈 Ventas Necesarias</button>
         </div>
 
         <!-- CRISIS 72 HORAS -->
