--- a/financieros.html
+++ b/financieros.html
@@ -419,6 +419,169 @@
             </div>
         </section>
 
+        <!-- Flujo de Caja Total -->
+        <section class="section">
+            <h2>💸 FLUJO DE CAJA TOTAL</h2>
+
+            <!-- Resumen Grande -->
+            <div class="highlight-box" style="text-align: center; margin-bottom: 30px;">
+                <h4 style="font-size: 16px; margin-bottom: 8px;">MOVIMIENTO TOTAL DE DINERO (6 MESES)</h4>
+                <div class="stat-value" style="font-size: 56px;">$55.6M+</div>
+                <p style="margin-top: 8px;">Entre inversiones, ingresos y gastos operativos</p>
+            </div>
+
+            <div class="grid-2">
+                <div class="card" style="border-left: 4px solid #4ecdc4;">
+                    <h3 style="color: #4ecdc4;">📥 ENTRADAS</h3>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Concepto</th>
+                                <th>Monto</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Inversiones iniciales socios</td>
+                                <td class="amount positive">$43,284,000</td>
+                            </tr>
+                            <tr>
+                                <td>Préstamos emergencia</td>
+                                <td class="amount positive">$5,980,000</td>
+                            </tr>
+                            <tr>
+                                <td>Ventas acumuladas (6 meses)</td>
+                                <td class="amount positive">$19,500,000</td>
+                            </tr>
+                            <tr style="background: #1f1f1f;">
+                                <td><strong>TOTAL ENTRADAS</strong></td>
+                                <td class="amount"><strong>$68,764,000</strong></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <div class="card" style="border-left: 4px solid #ff6b6b;">
+                    <h3 style="color: #ff6b6b;">📤 SALIDAS</h3>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Concepto</th>
+                                <th>Monto</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Adecuación local e infraestructura</td>
+                                <td class="amount">$18,000,000</td>
+                            </tr>
+                            <tr>
+                                <td>Arriendo (6 meses)</td>
+                                <td class="amount">$14,400,000</td>
+                            </tr>
+                            <tr>
+                                <td>Nóminas (6 meses)</td>
+                                <td class="amount">$19,464,000</td>
+                            </tr>
+                            <tr>
+                                <td>Insumos y materia prima</td>
+                                <td class="amount">$8,000,000</td>
+                            </tr>
+                            <tr>
+                                <td>Servicios y otros</td>
+                                <td class="amount">$3,500,000</td>
+                            </tr>
+                            <tr style="background: #1f1f1f;">
+                                <td><strong>TOTAL SALIDAS</strong></td>
+                                <td class="amount"><strong>$63,364,000</strong></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
+            <!-- Gráfico de flujo -->
+            <div class="card" style="margin-top: 20px;">
+                <h3>📊 Distribución de Gastos Mensuales</h3>
+                <div class="chart-container" style="height: 280px;">
+                    <canvas id="gastosChart"></canvas>
+                </div>
+            </div>
+        </section>
+
+        <!-- Ventas por Categoría -->
+        <section class="section">
+            <h2>🏆 RANKING DE PRODUCTOS</h2>
+
+            <div class="card">
+                <h3>📊 ¿Qué es lo que más se vende?</h3>
+                <div class="grid-2">
+                    <div class="chart-container" style="height: 320px;">
+                        <canvas id="categoriasChart"></canvas>
+                    </div>
+                    <div>
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>#</th>
+                                    <th>Categoría</th>
+                                    <th>% Ventas</th>
+                                    <th>Margen</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>🥇</td>
+                                    <td><strong>Bowls Fitness</strong></td>
+                                    <td class="amount positive">35%</td>
+                                    <td class="positive">65-70%</td>
+                                </tr>
+                                <tr>
+                                    <td>🥈</td>
+                                    <td><strong>Batidos Proteicos</strong></td>
+                                    <td class="amount positive">25%</td>
+                                    <td class="positive">62%</td>
+                                </tr>
+                                <tr>
+                                    <td>🥉</td>
+                                    <td><strong>Cafés</strong></td>
+                                    <td class="amount">18%</td>
+                                    <td class="positive">75-78%</td>
+                                </tr>
+                                <tr>
+                                    <td>4</td>
+                                    <td><strong>Repostería/Tortas</strong></td>
+                                    <td class="amount">12%</td>
+                                    <td>55%</td>
+                                </tr>
+                                <tr>
+                                    <td>5</td>
+                                    <td><strong>Sándwiches</strong></td>
+                                    <td class="amount">7%</td>
+                                    <td>55%</td>
+                                </tr>
+                                <tr>
+                                    <td>6</td>
+                                    <td><strong>Mr Creamy (Helado)</strong></td>
+                                    <td class="amount">3%</td>
+                                    <td class="positive">82%</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+
+            <div class="highlight-box">
+                <h4>🎯 Producto Estrella: Bowls Fitness</h4>
+                <p>
+                    Los bowls representan el 35% de las ventas con márgenes del 65-70%.
+                    Son la columna vertebral del negocio junto con los batidos proteicos.
+                    El café, aunque con menor volumen, tiene el mejor margen (75-78%).
+                </p>
+            </div>
+        </section>
+
         <!-- Márgenes por Producto -->
         <section class="section">
             <h2>💰 MÁRGENES POR PRODUCTO</h2>
@@ -976,6 +1139,99 @@
                                 return ' $' + value.toLocaleString('es-CO') + ' COP';
                             }
                         }
+                    }
+                }
+            }
+        });
+
+        // Gastos Chart (Dona)
+        new Chart(document.getElementById('gastosChart'), {
+            type: 'doughnut',
+            data: {
+                labels: ['Arriendo (37.7%)', 'Nómina Gustavo (25.5%)', 'Nómina Nicolás (25.5%)', 'Servicios (7.2%)', 'Otros (4.1%)'],
+                datasets: [{
+                    data: [2400000, 1622000, 1622000, 456000, 260000],
+                    backgroundColor: [
+                        '#ff6b6b',
+                        '#4ecdc4',
+                        '#45b7d1',
+                        '#ffe66d',
+                        '#a29bfe'
+                    ],
+                    borderWidth: 0,
+                    borderRadius: 4
+                }]
+            },
+            options: {
+                responsive: true,
+                maintainAspectRatio: false,
+                cutout: '55%',
+                plugins: {
+                    legend: {
+                        position: 'right',
+                        labels: {
+                            color: '#a0a0a0',
+                            padding: 12,
+                            usePointStyle: true,
+                            font: { size: 11 }
+                        }
+                    },
+                    tooltip: {
+                        backgroundColor: '#1a1a1a',
+                        callbacks: {
+                            label: ctx => ' $' + ctx.parsed.toLocaleString('es-CO') + ' COP'
+                        }
+                    }
+                }
+            }
+        });
+
+        // Categorías Chart (Barras horizontales)
+        new Chart(document.getElementById('categoriasChart'), {
+            type: 'bar',
+            data: {
+                labels: ['Bowls Fitness', 'Batidos Proteicos', 'Cafés', 'Repostería/Tortas', 'Sándwiches', 'Mr Creamy'],
+                datasets: [{
+                    label: '% de Ventas',
+                    data: [35, 25, 18, 12, 7, 3],
+                    backgroundColor: [
+                        '#c4f135',
+                        '#8bc34a',
+                        '#35a7ff',
+                        '#ff6b35',
+                        '#ffab40',
+                        '#a29bfe'
+                    ],
+                    borderRadius: 6,
+                    borderSkipped: false
+                }]
+            },
+            options: {
+                indexAxis: 'y',
+                responsive: true,
+                maintainAspectRatio: false,
+                plugins: {
+                    legend: { display: false },
+                    tooltip: {
+                        backgroundColor: '#1a1a1a',
+                        callbacks: {
+                            label: ctx => ' ' + ctx.parsed.x + '% de las ventas'
+                        }
+                    }
+                },
+                scales: {
+                    x: {
+                        beginAtZero: true,
+                        max: 40,
+                        grid: { color: '#2a2a2a' },
+                        ticks: {
+                            color: '#666',
+                            callback: v => v + '%'
+                        }
+                    },
+                    y: {
+                        grid: { display: false },
+                        ticks: { color: '#a0a0a0', font: { size: 12 } }
                     }
                 }
             }
